cambios  y carpeta  plugins para limpiar el main

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,1 +1,8 @@
+@font-face {
+  font-family: ARBONNIE;
+  src: local("ARBONNIE"), local("ARBONNIE"), url("../fonts/ARBONNIE.ttf");
+}
 
+.arbonie {
+  font-family: ARBONNIE;
+}
